@@ -15,6 +15,8 @@ BUGFIXES
    a process which is not our children.
  * Issue #248: (Linux) psutil.network_io_counters() might return erroneous NIC
    names.
+ * Issue #252: (Windows) process getcwd() erroneously raise NoSuchProcess for
+   processes owned by another user.  It now raises AccessDenied instead.
 
 
 0.4.1 - 2011-12-14
